Distinct layout for login page if there is a logged user

--- a/mama_cas/templates/mama_cas/__login.html
+++ b/mama_cas/templates/mama_cas/__login.html
@@ -2,8 +2,13 @@
 {% load i18n %}
 
 {% block content %}
-    {% include "mama_cas/_messages.html" %}
 
+{% include "mama_cas/_messages.html" %}
+
+{% if user and not user.is_anonymous %}
+    <h3>{% trans "You are logged in as " %} <b>{{ user }}</b></h3>
+    <a href="/logout" class="btn btn-primary">{% trans "Log out" %}</a>
+{% else %}
     <form id="login-form" class="group" method="post">
         {% csrf_token %}
         <fieldset class="inputs">
@@ -23,4 +28,5 @@
             <input class="button box" type="submit" name="submit_login" value="{% trans "Login" %}" />
         </fieldset>
     </form>
+{% endif %}
 {% endblock content %}
